--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <title></title>
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+    href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+    rel="stylesheet"
+/>
 <link rel="stylesheet" href="/bundle.css" />
 <main></main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
 <script src="/bundle.js"></script>
