--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <title></title>
+<meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+/>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
