--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,12 @@
 />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@200&display=swap"
+    rel="stylesheet"
+/>
 <link
     href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
     rel="stylesheet"
